[package]
name = "redactor"
version = "0.1.0"
authors = ["Nurahmadie <nurahmadie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.9.0"
actix-rt = "^1.0.0"
redis = "0.13.0"
failsafe = "0.3.1"
futures = { version = "^0.3.1", features = [ "compat" ] }
